FLE FindAndModify missing "findandmodify" field in placeholder result

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.11
    • Affects Version/s: None
    • Component/s: Querying
    • None
    • Fully Compatible
    • ALL
    • Query 2019-05-20
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      For all the query analysis functions, processXCommand returns a bson object with

      {"X": collection, ...}

      except for processFindAndModifyCommand, which doesn't include the "findandmodify" field.

            Assignee:
            Pawel Terlecki (Inactive)
            Reporter:
            Shreyas Kalyan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: