SERVER-40901: Handle legacy findandmodify name in query analysis

We need to have a special case for findandmodify to make sure the field
with the collection name does not get stripped out in encoding. In order
to keep the same shaper of ProcessQueryCommand as other similar methods,
a special case got added.

GitOrigin-RevId: 99310abe74651d02ef8d406ae8d0f2788a537087